--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,5 +34,6 @@ jobs:
       shell: bash -l {0}
       run: |
         conda create -n test_env python=3.8.13 libgdal=3.5.2 -c conda-forge -c defaults -y
+        conda activate test_env
         PIP_NO_BINARY=rasterio pip install .
         pytest --compare
