wip(CI) start adding CI/CD

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -1,17 +1,9 @@
-name: Continuous Deployment
+name: ContinuousDeployment
 
 on:
   workflow_run:
-    workflows: ["Continuous Integration"]
+    workflows: [ContinuousIntegration]
     types: [completed]
-  push:
-    branches:
-      - "main"
-      - "add_CI"
-  pull_request:
-    branches:
-      - "main"
-      - "add_CI"
 
 permissions:
   contents: write
