wip(CI) start adding CI/CD

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -4,7 +4,8 @@ on:
   workflow_run:
     workflows: [ContinuousIntegration]
     types: [completed]
-
+    branches:
+      - add_CI
 permissions:
   contents: write
 
