wip(CI) start adding CI/CD

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,10 @@ on:
     branches:
       - "main"
       - "add_CI"
-
+  pull_request:
+    branches:
+      - "main"
+      - "add_CI"
 permissions:
   contents: read
 
