--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
+    environment:
+      name: testpypi
+      url: https://test.pypi.org/p/georastertools
     steps:
     - uses: actions/checkout@v4
     - name: Setup Python 3.8
