--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       run: |
         conda create -n deploy_env python=3.8.13 libgdal=3.5.2 build twine -c conda-forge -y
         conda activate deploy_env
-        python -m build --wheel --no-sdist
+        python -m build --wheel
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
