wip(CI) start adding CI/CD

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,9 +12,9 @@ long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
 url = https://github.com/cnes/georastertools
 project_urls =
-    Source = https://github.com/cnes/georastertools
-    Changelog = https://github.com/cnes/georastertools/blob/master/CHANGELOG.rst
-    Issues = https://github.com/cnes/georastertools/issues
+    Source = https://github.com/cnes/rastertools
+    Changelog = https://github.com/cnes/rastertools/blob/master/CHANGELOG.rst
+    Issues = https://github.com/cnes/rastertools/issues
 
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
