--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,27 @@ jobs:
       with:
         python-version: 3.8.13
         auto-activate-base: false
-    - name: Install and test
+    - name: Create test env
+      shell: bash -l {0}
+      run: |
+        conda create -n test_env python=3.8.13 libgdal=3.5.2 -c conda-forge -c defaults -y
+        conda activate test_env
+        PIP_NO_BINARY=rasterio pip install .
+        pip install pylint radon
+    - name: code quality
+      shell: bash -l {0}
+      run: |
+        conda activate test_env
+        pylint --disable=all --enable=too-many-statements src/eolab/georastertools/
+        pylint --disable=all --enable=too-many-nested-blocks src/eolab/georastertools/
+    - name: test
       shell: bash -l {0}
       run: |
         echo "test"
         #conda create -n test_env python=3.8.13 libgdal=3.5.2 -c conda-forge -c defaults -y
         #conda activate test_env
-        #PIP_NO_BINARY=rasterio pip install .
-        #pytest --compare
+        
+        pytest --compare
   deploy:
     needs: test
     runs-on: ubuntu-latest
