--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,14 +27,14 @@ jobs:
         conda create -n test_env python=3.8.13 libgdal=3.5.2 -c conda-forge -c defaults -y
         conda activate test_env
         PIP_NO_BINARY=rasterio pip install .
-        pip install pylint radon
+        pip install pylint mccabe
     - name: code quality
       shell: bash -l {0}
       run: |
         conda activate test_env
         pylint --disable=all --fail-under=10 --enable=too-many-statements src/eolab/georastertools/
         pylint --disable=all --fail-under=10 --enable=too-many-nested-blocks src/eolab/georastertools/
-        radon cc -s src/eolab/georastertools | awk '$1 ~ /^[A-Z]+/ && $2 > 25 { exit 1 }'
+        ./continuous_integration/scripts/check_mccabe_complexity.sh 25 src/eolab/georastertools
     - name: test
       shell: bash -l {0}
       run: |
