--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       shell: bash -l {0}
       run: |
         conda activate test_env
-        pytest --fail-under=99 --compare
+        pytest --cov-fail-under=99 --compare
   deploy:
     needs: test
     runs-on: ubuntu-latest
