--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Workflow
+name: CI Workflow
 
 on:
   pull_request:
@@ -16,11 +16,6 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.8.13"
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          python-version: 3.8.13
-          auto-activate-base: false
       - name: Create test env
         shell: bash -l {0}
         run: |
@@ -51,13 +46,6 @@ jobs:
         conda activate test_env
         PIP_NO_BINARY=rasterio pip install .
         pip install pylint mccabe
-    - name: code quality
-      shell: bash -l {0}
-      run: |
-        conda activate test_env
-        pylint --disable=all --fail-under=10 --enable=too-many-statements src/eolab/georastertools/
-        pylint --disable=all --fail-under=10 --enable=too-many-nested-blocks src/eolab/georastertools/
-        ./continuous_integration/scripts/check_mccabe_complexity.sh 25 src/eolab/georastertools
     - name: test
       shell: bash -l {0}
       run: |
